[fix] 채팅 기록 조회기능 오류 수정